--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ header button {
 }
 /* main */
 main {
+
+    height: 70vh;
     margin: 15px 30px;
     padding: 5px;
 }
@@ -63,7 +65,7 @@ main {
 
 /* footer */
 footer {
-    height: 150px;
+    height: 100px;
     width: 100%;
     padding: 20px 0;
     position: absolute;
@@ -71,6 +73,18 @@ footer {
     bottom: 0;
     display: flex;
     justify-content: space-between;
+    color: #fff;
+}
+
+.left-commands {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
 }
 
 
@@ -83,12 +97,12 @@ header {
 }
 
 /* main */
-main {
+/* main {
     width: auto;
-    height: 70vh;
+    
     border: 2px dotted #fff;
     overflow: auto;
-}
+} */
 
 .name {
     border: 1px dotted white ;
@@ -99,8 +113,7 @@ footer {
 }
 
 .left-commands {
-    height: 80px;
-    width: 20%;
+    /* width: 20%; */
     border: 1px dashed pink;
 }
 
@@ -114,4 +127,9 @@ footer {
     height: 80px;
     width: 20%;
     border: 1px dashed pink;
+}
+
+
+.command {
+    border: 1px dotted #11fd00;
 }
