--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ footer {
     background-color: #222222;
 }
 
-.commands {
+nav {
     display: flex;
     align-items: center;
 }
@@ -129,13 +129,13 @@ footer button {
 
 /* DEBUG */
 
-
-/* header */
 /* header {
     border: 1px solid #fff;
 } */
 
-/* main */
+
+
+
 /* main {
     border: 2px dotted #fff;
 } */
@@ -143,7 +143,9 @@ footer button {
 /* .name {
     border: 1px dotted white ;
 } */
-/* footer */
+
+
+
 /* footer {
     border: 1px solid #fff;
 }
@@ -159,5 +161,3 @@ footer button {
 .icon{
     border: 1px dotted #11fd00;
 }
-
-.icon-elements */
